--- a/jogo-de-cartas/package.json
+++ b/jogo-de-cartas/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/ngrok": "^4.1.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
